[package]
name = "netherite-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v3", "serde", "v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.140", features = ["derive"] }

protocol = { path = "protocol", features = ["derive"] }
enum_utils = { path = "enum_utils", features = ["derive"] }
chat = { path = "chat" }

serde_json = "1.0.83"
hematite-nbt = "0.5.2"
bytebuffer = { path = "bytebuffer" }
byteorder = "1.4.3"
toml = "0.5.9"
bytes = "1.2.1"

rsa = "0.6.1"
sha2 = "0.10.2"
lazy_static = "1.4.0"
rand = "0.8.5"
regex-macro = "0.2.0"
aes = "0.8.1"
cfb8 = "0.8.1"
rustc-serialize = "0.3.24"
reqwest = { version = "0.11", features = ["json"] }
sha-1 = "0.10.0"
num-bigint = "0.4.3"
flume = "0.10.14"
derive-getters = "0.2.0"