[package]
name = "netherite-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v3", "serde", "v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.140", features = ["derive"] }
anyhow = "1.0.71"
protocol_derive = { path = "macros/protocol_derive" }
enum_utils = { path = "enum_utils", features = ["derive"] }

serde_json = "1.0.83"
convert_case = "0.6.0"
paste = "1.0.7"
hematite-nbt = "0.5.2"
bytebuffer = { path = "bytebuffer" }
byteorder = "1.4.3"
toml = "0.5.9"
bytes = "1.2.1"
rsa = "0.7.0"
#rsa = "0.6.1"
sha2 = { version = "0.10.6", features = ["oid"] }
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.6.0"
flate2 = "1 "
md5 = "0.7.0"
regex-macro = "0.2.0"
aes = "0.8.1"
cfb8 = "0.8.1"
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["json"] }
sha-1 = "0.10.0"
num-bigint = "0.4.3"
flume = "0.10.14"
derive-getters = "0.2.0"
num-traits = "0.2.15"
