[package]
name = "netherite-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tokio-stream = "0.1.14"

futures = "0.3.28"

enum_utils = { git = "https://github.com/Revxrsal/enum-utils", features = ["derive"] }
bytebuffer = { git = "https://github.com/Revxrsal/bytebuffer-rs.git" }

uuid = { version = "1.3.2", features = ["v3", "serde", "v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.140", features = ["derive"] }
anyhow = "1.0.71"

protocol = { path = "protocol", features = ["derive"] }
chat = { path = "chat" }
auth = { path = "auth" }
bevy = "0.10.1"
slab = "0.4.8"

serde_json = "1.0.83"
convert_case = "0.6.0"
paste = "1.0.7"
hematite-nbt = "0.5.2"

byteorder = "1.4.3"
toml = "0.7.3"
bytes = "1.2.1"
rsa = "0.9.2"
sha2 = { version = "0.10.6", features = ["oid"] }
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.6.0"
flate2 = "1 "
md5 = "0.7.0"
regex-macro = "0.2.0"
aes = "0.8.1"
cfb8 = "0.8.1"
base64 = "0.21.0"
sha-1 = "0.10.0"
flume = "0.10.14"
derive-getters = "0.2.0"
num-traits = "0.2.15"
dashmap = "5.4.0"
