[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
protocol = { path = "../protocol" }
serde = "1.0.162"
serde_json = "1.0.96"
num-bigint = "0.4.3"
sha1 = "0.10.5"
uuid = { version = "1.3.2", features = ["v3", "serde", "v4", "fast-rng", "macro-diagnostics"] }
md5 = "0.7.0"