[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.162"
serde_json = "1.0.96"
protocol = { path = "../protocol" }
convert_case = "0.6.0"
lazy_static = "1.4.0"
enum_utils = { git = "https://github.com/Revxrsal/enum-utils", features = ["derive"] }
