[package]
name = "enum_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_utils_derive = { path = "enum_utils_derive", optional = true }

[features]
default = []

derive = ["enum_utils_derive"]