[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
bytebuffer = "0.2.1"
uuid = "1.1.2"
paste = "1.0.7"
hematite-nbt = "0.5.2"
regex = "1.6.0"
lazy_static = "1.4.0"
flate2 = "1.0.24"
serde = "1.0.141"
serde_json = "1.0.82"

protocol-derive = { path = "../protocol-derive" }
enum-helpers = { path = "../enum-helpers" }