[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.8", features = ["full"] }
anyhow = "1.0.71"
bytes = "1.4.0"
bytebuffer = { git = "https://github.com/Revxrsal/bytebuffer-rs.git" }
byteorder = "1.4.3"
hematite-nbt = "0.5.2"
uuid = "1.3.2"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.96"
enum_utils = { git = "https://github.com/Revxrsal/enum-utils", features = ["derive"] }
protocol_derive = { path = "protocol_derive", optional = true }
cfb8 = "0.8.1"
aes = "0.8.2"
flate2 = "1.0.26"
thiserror = "1.0.40"
paste = "1.0.12"
md5 = "0.7.0"
regex = "1.8.1"
lazy_static = "1.4.0"

[dev-dependencies]
tokio-stream = "0.1.14"
tokio = { version = "1.28.1", features = ["full"] }
[features]
default = []
derive = ["protocol_derive"]