[package]
name = "protocol_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.15", features = ["derive"] }
quote = "1.0.20"
darling = "0.20.1"
proc-macro2 = "1.0.42"
lazy_static = "1.4.0"